--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chop-dom",
   "version": "1.0.1",
-  "main": "dist/index.d.ts",
+  "main": "dist/index",
   "type": "module",
   "scripts": {
     "build": "rollup -c ./rollup.config.js"
